remove default value for tld. remove test task at end

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -107,9 +107,9 @@
     - install
     - deploy
 
-- name: Ensure service is up
-  uri: url=http://{{service_name}}.{{tld}}
-  tags:
-    - test
+#- name: Ensure service is up
+#  uri: url=http://{{service_name}}.{{tld}}
+#  tags:
+#    - test
 
     
